EPOS/Microsoft Visual Basic/Example VB 2010 64-Bit/Definitions.vb


Declare Function VCS_GetObject Lib "EposCmd64.dll" Alias "VCS_GetObject" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal ObjectIndex As UShort, ByVal ObjectSubIndex As Byte, ByRef pData As SByte, ByVal NbOfBytesToRead As Integer, ByRef pNbOfBytesRead As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetObject Lib "EposCmd64.dll" Alias "VCS_GetObject" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal ObjectIndex As UShort, ByVal ObjectSubIndex As Byte, ByRef pData As Integer, ByVal NbOfBytesToRead As Integer, ByRef pNbOfBytesRead As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetObject Lib "EposCmd64.dll" Alias "VCS_GetObject" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal ObjectIndex As UShort, ByVal ObjectSubIndex As Byte, ByRef pData As Long, ByVal NbOfBytesToRead As Integer, ByRef pNbOfBytesRead As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetObject Lib "EposCmd64.dll" Alias "VCS_GetObject" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal ObjectIndex As UShort, ByVal ObjectSubIndex As Byte, ByRef pData As Byte, ByVal NbOfBytesToRead As Integer, ByRef pNbOfBytesRead As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetObject Lib "EposCmd64.dll" Alias "VCS_GetObject" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal ObjectIndex As UShort, ByVal ObjectSubIndex As Byte, ByRef pData As UShort, ByVal NbOfBytesToRead As Integer, ByRef pNbOfBytesRead As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetObject Lib "EposCmd64.dll" Alias "VCS_GetObject" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal ObjectIndex As UShort, ByVal ObjectSubIndex As Byte, ByRef pData As UInteger, ByVal NbOfBytesToRead As Integer, ByRef pNbOfBytesRead As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetObject Lib "EposCmd64.dll" Alias "VCS_GetObject" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal ObjectIndex As UShort, ByVal ObjectSubIndex As Byte, ByRef pData As ULong, ByVal NbOfBytesToRead As Integer, ByRef pNbOfBytesRead As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetObject Lib "EposCmd64.dll" Alias "VCS_GetObject" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal ObjectIndex As UShort, ByVal ObjectSubIndex As Byte, ByRef pData As String, ByVal NbOfBytesToRead As Integer, ByRef pNbOfBytesRead As Integer, ByRef pErrorCode As UInteger) As Integer

Declare Function VCS_Restore Lib "EposCmd64.dll" Alias "VCS_Restore" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_Store Lib "EposCmd64.dll" Alias "VCS_Store" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer

'Advanced Functions
'Motor
Declare Function VCS_SetMotorType Lib "EposCmd64.dll" Alias "VCS_SetMotorType" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal MotorType As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetDcMotorParameter Lib "EposCmd64.dll" Alias "VCS_SetDcMotorParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal NominalCurrent As UShort, ByVal MaxOutputCurrent As UShort, ByVal ThermalTimeConstant As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetDcMotorParameterEx Lib "EposCmd64.dll" Alias "VCS_SetDcMotorParameterEx" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal NominalCurrent As UInteger, ByVal MaxOutputCurrent As UInteger, ByVal ThermalTimeConstant As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetEcMotorParameter Lib "EposCmd64.dll" Alias "VCS_SetEcMotorParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal NominalCurrent As UShort, ByVal MaxOutputCurrent As UShort, ByVal ThermalTimeConstant As UShort, ByVal NbOfPolePairs As Byte, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetEcMotorParameterEx Lib "EposCmd64.dll" Alias "VCS_SetEcMotorParameterEx" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal NominalCurrent As UInteger, ByVal MaxOutputCurrent As UInteger, ByVal ThermalTimeConstant As UShort, ByVal NbOfPolePairs As Byte, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetMotorType Lib "EposCmd64.dll" Alias "VCS_GetMotorType" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pMotorType As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetDcMotorParameter Lib "EposCmd64.dll" Alias "VCS_GetDcMotorParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pNominalCurrent As UShort, ByRef pMaxOutputCurrent As UShort, ByRef pThermalTimeConstant As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetDcMotorParameterEx Lib "EposCmd64.dll" Alias "VCS_GetDcMotorParameterEx" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pNominalCurrent As UInteger, ByRef pMaxOutputCurrent As UInteger, ByRef pThermalTimeConstant As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetEcMotorParameter Lib "EposCmd64.dll" Alias "VCS_GetEcMotorParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pNominalCurrent As UShort, ByRef pMaxOutputCurrent As UShort, ByRef pThermalTimeConstant As UShort, ByRef pNbOfPolePairs As Byte, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetEcMotorParameterEx Lib "EposCmd64.dll" Alias "VCS_GetEcMotorParameterEx" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pNominalCurrent As UInteger, ByRef pMaxOutputCurrent As UInteger, ByRef pThermalTimeConstant As UShort, ByRef pNbOfPolePairs As Byte, ByRef pErrorCode As UInteger) As Integer

'Sensor
Declare Function VCS_SetSensorType Lib "EposCmd64.dll" Alias "VCS_SetSensorType" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal SensorType As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetIncEncoderParameter Lib "EposCmd64.dll" Alias "VCS_SetIncEncoderParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal EncoderResolution As UInteger, ByVal InvertedPolarity As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetHallSensorParameter Lib "EposCmd64.dll" Alias "VCS_SetHallSensorParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal InvertedPolarity As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetSsiAbsEncoderParameter Lib "EposCmd64.dll" Alias "VCS_SetSsiAbsEncoderParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal DataRate As UShort, ByVal NbOfMultiTurnDataBits As UShort, ByVal NbOfSingleTurnDataBits As UShort, ByVal InvertedPolarity As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetSensorType Lib "EposCmd64.dll" Alias "VCS_GetSensorType" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pSensorType As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetIncEncoderParameter Lib "EposCmd64.dll" Alias "VCS_GetIncEncoderParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pEncoderResolution As Integer, ByRef pInvertedPolarity As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetHallSensorParameter Lib "EposCmd64.dll" Alias "VCS_GetHallSensorParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pInvertedPolarity As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetSsiAbsEncoderParameter Lib "EposCmd64.dll" Alias "VCS_GetSsiAbsEncoderParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pDataRate As UShort, ByRef pNbOfMultiTurnDataBits As UShort, ByRef pNbOfSingleTurnDataBits As UShort, ByRef pInvertedPolarity As Integer, ByRef pErrorCode As UInteger) As Integer

'Safety
Declare Function VCS_SetMaxFollowingError Lib "EposCmd64.dll" Alias "VCS_SetMaxFollowingError" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal MaxFollowingError As UInteger, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetMaxFollowingError Lib "EposCmd64.dll" Alias "VCS_GetMaxFollowingError" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pMaxFollowingError As UInteger, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetMaxProfileVelocity Lib "EposCmd64.dll" Alias "VCS_SetMaxProfileVelocity" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal MaxProfileVelocity As UInteger, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetMaxProfileVelocity Lib "EposCmd64.dll" Alias "VCS_GetMaxProfileVelocity" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pMaxProfileVelocity As UInteger, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetMaxAcceleration Lib "EposCmd64.dll" Alias "VCS_SetMaxAcceleration" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal MaxAcceleration As UInteger, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetMaxAcceleration Lib "EposCmd64.dll" Alias "VCS_GetMaxAcceleration" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pMaxAcceleration As UInteger, ByRef pErrorCode As UInteger) As Integer

'Controller Gains
Declare Function VCS_SetControllerGain Lib "EposCmd64.dll" Alias "VCS_SetControllerGain" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal EController As UShort, ByVal EGain As UShort, ByVal Value As ULong, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetControllerGain Lib "EposCmd64.dll" Alias "VCS_GetControllerGain" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal EController As UShort, ByVal EGain As UShort, ByRef pValue As ULong, ByRef pErrorCode As UInteger) As Integer

'Inputs/Outputs
Declare Function VCS_DigitalInputConfiguration Lib "EposCmd64.dll" Alias "VCS_DigitalInputConfiguration" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal DigInputNb As UShort, ByVal Configuration As UShort, ByVal Mask As Integer, ByVal Polarity As Integer, ByVal ExecutionMask As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_DigitalOutputConfiguration Lib "EposCmd64.dll" Alias "VCS_DigitalOutputConfiguration" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal DigOutputNb As UShort, ByVal Configuration As UShort, ByVal State As Integer, ByVal Mask As Integer, ByVal Polarity As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_AnalogInputConfiguration Lib "EposCmd64.dll" Alias "VCS_AnalogInputConfiguration" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal AnalogInputNb As UShort, ByVal Configuration As UShort, ByVal ExecutionMask As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_AnalogOutputConfiguration Lib "EposCmd64.dll" Alias "VCS_AnalogOutputConfiguration" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal AnalogOutputNb As UShort, ByVal Configuration As UShort, ByRef pErrorCode As UInteger) As Integer

'Units
Declare Function VCS_SetVelocityUnits Lib "EposCmd64.dll" Alias "VCS_SetVelocityUnits" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal VelDimension As Byte, ByVal VelNotation As SByte, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetVelocityUnits Lib "EposCmd64.dll" Alias "VCS_GetVelocityUnits" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pVelDimension As Byte, ByRef pVelNotation As SByte, ByRef pErrorCode As UInteger) As Integer
